set checked to cash by default paymentmode

--- a/customer/templates/customer/_partials/_collect_payment_modal.html
+++ b/customer/templates/customer/_partials/_collect_payment_modal.html
@@ -11,7 +11,7 @@
                 <!-- set-payment-mode used in js -->
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input type="radio" class="form-check-input set-payment-mode" name="porxy-payment-mode" value="cash" id="planOption1" value=""> Cash <i class="input-helper"></i>
+                        <input type="radio" class="form-check-input set-payment-mode" name="porxy-payment-mode" value="cash" id="planOption1" value="" checked> Cash <i class="input-helper"></i>
                     </label>
                 </div>
                 <div class="form-check">
