changes to the add user template

--- a/customer/templates/customer/_partials/_next_user_permissions_form.html
+++ b/customer/templates/customer/_partials/_next_user_permissions_form.html
@@ -1,10 +1,10 @@
 {% for user_app_permissions_form in user_app_permissions_formset %}
             
-<div class="col-12 col-md-6">
+<div class="col-12 col-md-6 ps-2 pe-0">
   <div class="row m-3">
     <div class="col-12 col-md-6">
       <div class="d-flex">
-        <div class="form-check form-switch mx-2 col-form-label"
+        <div class="form-check form-switch mx-2 col-form-label mt-0"
           data-module="{{user_app_permissions_form.module.value}}">
           {{ user_app_permissions_form.has_access }}
         </div>
