--- a/customer/templates/customer/onboard_user_view.html
+++ b/customer/templates/customer/onboard_user_view.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="form-container">
+<div class="form-container" style="width:95%;">
   <div class="col-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
@@ -41,64 +41,57 @@
             <div class="step-name">Add Collaborators</div>
           </div>
         </div>
-        <form class="row border-top py-4 px-5" method="POST">
-          <div class="col-md-8">
-            {% csrf_token %}
+        <form class="row border-top py-4 px-0" method="POST">
+          {% csrf_token %}
+          <div class="text-faded py-4">Assign access to the initial designated users</div>
+            <div class="col-md-5">
+              <div class="text-faded py-3">User Details</div>
+              <div>
+                {{ customer_user_form.customer}}
+                <div class="form-group">
+                  <label for="{{ customer_user_form.legal_name.id_for_label }}">Fullname *</label>
+                  {{ customer_user_form.full_name }}
+                </div>
 
-            <div class="text-faded py-4">Assign access to the initial designated users</div>
-            {{ customer_user_form.customer}}
+                <div class="form-group">
+                  <label for="{{ customer_user_form.designation.id_for_label }}">Designation *</label>
+                  {{ customer_user_form.designation }}
+                </div>
 
-            <div class="">
-              <div class="form-group">
-                <label for="{{ customer_user_form.legal_name.id_for_label }}">Fullname *</label>
-                {{ customer_user_form.full_name }}
+                <div class="form-group">
+                  <label for="{{ customer_user_form.mobile_no.id_for_label }}">Mobile No *</label>
+                  {{ customer_user_form.mobile_no }}
+                </div>
+
+                <div class="form-group">
+                  <label for="{{ customer_user_form.email.id_for_label }}">Email *</label>
+                  {{ customer_user_form.email }}
+                </div>
               </div>
             </div>
-
-            <div class="form-group">
-              <label for="{{ customer_user_form.designation.id_for_label }}">Designation *</label>
-              {{ customer_user_form.designation }}
+            <div class="col-md-7">
+              <div class="text-faded py-3">Permissions {% if not is_next_user %}(Full Access){% endif %}</div>
+              <div class="row">
+                {{ user_app_permissions_formset.management_form }}
+                {% if not is_next_user %}
+                {% include 'customer/_partials/_admin_permissions_form.html' %}
+                {% else %}
+                {% include 'customer/_partials/_next_user_permissions_form.html' %}
+                {% endif %}
+              </div>
             </div>
-
-            <div class="form-group">
-              <label for="{{ customer_user_form.mobile_no.id_for_label }}">Mobile No *</label>
-              {{ customer_user_form.mobile_no }}
-            </div>
-
-            <div class="form-group">
-              <label for="{{ customer_user_form.email.id_for_label }}">Email *</label>
-              {{ customer_user_form.email }}
-            </div>
-
-          </div>
-          <div class="col-md-4">
-            <h2 class="py-4">Added Users</h2>
-            <ol>
-              {% for user in users %}
-              <li>{{ user.full_name }} {{ user.designation }}</li>
-              {% endfor %}
-            </ol>
-          </div>
+          
           <hr>
-          <div class="text-faded py-3">Permissions {% if not is_next_user %}(Full Access){% endif %}</div>
-          <div class="row">
-            {{ user_app_permissions_formset.management_form }}
-            {% if not is_next_user %}
-            {% include 'customer/_partials/_admin_permissions_form.html' %}
-            {% else %}
-            {% include 'customer/_partials/_next_user_permissions_form.html' %}
-            {% endif %}
-          </div>
 
           {% if not is_next_user %}
-          <div class="text-center mt-5">
+          <div class="text-center mt-2">
             <a href="{% url 'customer:onboard-select-plan' customer_id %}" class="btn btn-light me-3">Go Back</a>
             <button type="submit" class="btn btn-gradient-primary me-3" name="action" value="add_more_user">Add Next
               User</button>
             <button type="submit" class="btn btn-gradient-primary" name="action" value="done">Done</button>
           </div>
           {% else %}
-          <div class="text-center mt-5">
+          <div class="text-center mt-2">
             <button type="submit" class="btn btn-gradient-primary me-3" name="action" value="add_more_user">
               Add Next User
             </button>
@@ -106,6 +99,31 @@
           </div>
           {% endif %}
         </form>
+        <div class="col-auto">
+          <h2 class="py-4">Added Users</h2>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Name</th>
+                <th>Designation</th>
+                <th>Mobile No.</th>
+                <th>Email</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for user in users %}
+                <tr>
+                  <td>{{forloop.counter}}</td>
+                  <td>{{user.full_name}}</td>
+                  <td>{{ user.designation }}</td>
+                  <td>{{ user.mobile_no }}</td>
+                  <td>{{ user.email }}</td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
