--- a/customer/templates/customer/_partials/_info_view.html
+++ b/customer/templates/customer/_partials/_info_view.html
@@ -11,7 +11,7 @@
         </div>
         <div>
             <label>SAAS Name</label>
-            {{ customer.legal_name }}
+            {{ customer.official_name }}
         </div>
     </div>
 
@@ -31,7 +31,7 @@
         </div>
         <div>
             <label>Short Name or Abbreviation (30 characters)</label>
-            {{ customer.short_name }}
+            {{ customer.sms_name }}
         </div>
     </div>
 
