--- a/customer/templates/customer/onboard_user_view.html
+++ b/customer/templates/customer/onboard_user_view.html
@@ -50,7 +50,7 @@
 
             <div class="">
               <div class="form-group">
-                <label for="{{ customer_user_form.legal_name.id_for_label }}">Fullname *</label>
+                <label for="{{ customer_user_form.official_name.id_for_label }}">Fullname *</label>
                 {{ customer_user_form.full_name }}
               </div>
             </div>
