--- a/customer/templates/customer/_partials/_user_form.html
+++ b/customer/templates/customer/_partials/_user_form.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label for="{{ customer_user_form.legal_name.id_for_label }}">Fullname *</label>
+    <label for="{{ customer_user_form.official_name.id_for_label }}">Fullname *</label>
     {{ customer_user_form.full_name }}
 </div>
 
