fix plan details bug

--- a/customer/templates/customer/_partials/_plan_options_form.html
+++ b/customer/templates/customer/_partials/_plan_options_form.html
@@ -22,7 +22,7 @@
         <div>per month</div>
         <div class="fw-bold mb-3">
           {% if plan.choice_label|plan_size == '0' %}
-          Unlimited members
+          2000+ members
           {% else %}
           upto {{ plan.choice_label|plan_size }} members
           {% endif %}
