clean popover logic

--- a/customer/static/customer/css/style.css
+++ b/customer/static/customer/css/style.css
@@ -138,7 +138,7 @@
   }
 
   .card-collaborators .actions-select:hover i {
-    color: #000000;
+    color: #343a40;
   }
   
   .card-collaborators .collaborators-details span {
