--- a/customer/templates/customer/edit_collaborator.html
+++ b/customer/templates/customer/edit_collaborator.html
@@ -67,7 +67,7 @@
           <hr>
           
           <div class="text-center mt-2">
-            <a type="button" href="{{go_back_url}}" class="btn btn-gradient-primary" name="action" value="done">Back</a>
+            <a type="button" href="{{go_back_url}}" class="btn btn-outline-primary" name="action" value="done">Back</a>
             <button type="submit" class="btn btn-gradient-primary" name="action" value="done">Done</button>
           </div>
         </form>
