--- a/customer/templates/customer/onboard/select_plan.html
+++ b/customer/templates/customer/onboard/select_plan.html
@@ -98,7 +98,7 @@
                   <s id="selectedPlanAmount"> ₹0.00</s>
                 </div>
               </div>
-              <div class="amount-group d-flex justify-content-between">
+              <div class="amount-group d-flex justify-content-between my-1">
                 <label class="badge badge-success text-white"><small>15% Discount</small></label>
                 <div id="subtotalAmount">
                   ₹0.00
@@ -108,7 +108,7 @@
               </div>
               <div class="amount-group d-flex justify-content-between">
                 <label>Discount</label>
-                <div id="discountAmount">
+                <div id="discountAmount" class="text-danger">
                   - ₹0.00
                 </div>
               </div>
