--- a/prospect/templates/prospect/overview_view.html
+++ b/prospect/templates/prospect/overview_view.html
@@ -83,22 +83,19 @@
 </div>
 
 <div class="row">
-  <div class="col-md-4 grid-margin stretch-card">
+  <div class="col-md-4 stretch-card">
     <div class="card">
-      <div class="card-body p-4">
+      <div class="card-body py-4 px-3">
           {% include 'prospect/_partials/_upcoming_events.html' %}
-          {% comment %} <canvas id="traffic-chart"></canvas> {% endcomment %}
-        {% comment %} <div id="traffic-chart-legend" class="rounded-legend legend-vertical legend-bottom-left pt-4"></div> {% endcomment %}
       </div>
     </div>
   </div>
-  <div class="col-md-8 grid-margin stretch-card">
+  <div class="col-md-8 stretch-card ps-0">
     <div class="card">
-      <div class="card-body p-4">
+      <div class="card-body py-4 px-3">
         <div class="clearfix">
           {% include 'prospect/_partials/_calendar.html' %}
         </div>
-        {% comment %} <canvas id="visit-sale-chart" class="mt-4"></canvas> {% endcomment %}
       </div>
     </div>
   </div>
