--- a/customer/templates/customer/customer/list_view.html
+++ b/customer/templates/customer/customer/list_view.html
@@ -126,7 +126,7 @@
                     </a>
                     <a class="dropdown-item" href="{% url 'customer:users' customer.uuid %}">
                       <i class="mdi mdi-account-multiple me-2"></i>
-                      Edit Collaborators
+                      View Collaborators
                     </a>
                     <a class="dropdown-item border-top view-action" data-bs-toggle="modal" data-bs-target="#viewModal"
                       data-url="{% url 'customer:get-poc' customer.uuid %}">
