--- a/customer/templates/customer/collaborator/list_view.html
+++ b/customer/templates/customer/collaborator/list_view.html
@@ -44,7 +44,7 @@
             </form>
           </div>
           <div class="col-4 col-lg-6">
-            <a class="btn btn-gradient-primary" href="{% url 'customer:add-collaborator' customer_id %}"><i class="mdi mdi-plus me-2"></i> Add Collaborator</a>
+            <a class="btn btn-gradient-primary float-end" href="{% url 'customer:add-collaborator' customer_id %}"><i class="mdi mdi-plus me-2"></i> Add Collaborator</a>
           </div>
         </div>
         <div class="d-flex flex-wrap my-2">
