init revenue, init usage

--- a/templates/_partials/_sidebar.html
+++ b/templates/_partials/_sidebar.html
@@ -32,7 +32,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'revenue:overview' %}">
           <span class="menu-title">Revenue</span>
           <i class="mdi mdi-cash-multiple menu-icon"></i>
         </a>
